--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
   </head>
   <body>
+    <h1>Camera on</h1>
     <video id="preview"></video>
 
     <script>
