--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,10 @@
       content="Web site created using create-react-app"
     />
     <title>Meal Manager</title>
+    <script
+      src="https://kit.fontawesome.com/a4f54ac35c.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
